# Steganography-Project

./: CMakeLists.txt  README.md  main.cpp  s.tga  s2.tga  sign_1.ppm  west_2.ppm  xnv.ppm
console/: console.cpp  console.hpp
graphic/: BMP.hpp  ImageAbstract.hpp  PPM.hpp  TARGA.h  TGA.hpp  graphic.cpp  graphic.hpp
